# M5StackRpiMonitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  run.sh  setup.sh
docs/: index.html
m5dial-firmware/: CMakeLists.txt  README.md  flash.bat  flash.sh  partitions.csv  sdkconfig  sdkconfig.defaults
m5dial-firmware/launcher/: launcher_rpi_patch.h
m5dial-firmware/launcher/launcher_icons/: icon_rpi.h
m5dial-firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
m5dial-firmware/main/apps/: app.h
m5dial-firmware/main/apps/app_ble_scanner/: app_ble_scanner.cpp  app_ble_scanner.h
m5dial-firmware/main/apps/app_ble_scanner/gui/: gui_ble_scanner.cpp  gui_ble_scanner.h
m5dial-firmware/main/apps/app_more_menu/: more_menu_render_callback.hpp  more_menu_selected_callback.cpp
m5dial-firmware/main/apps/app_ota_update/: app_ota_update.cpp  app_ota_update.h  ota_ble_client.cpp  ota_ble_client.h
m5dial-firmware/main/apps/app_rpi_monitor/: app_rpi_monitor.cpp  app_rpi_monitor.h  rpi_ble_client.cpp  rpi_ble_client.h  rpi_monitor_gui.cpp  rpi_monitor_gui.h
m5dial-firmware/main/apps/launcher/: launcher.cpp  launcher.h  launcher_render_callback.hpp  launcher_rpi_patch.h
m5dial-firmware/main/apps/launcher/launcher_icons/: icon_rpi.h
m5dial-firmware/main/apps/utilities/ble_demo/: ble_demo.c  blehr_sens.h  gatt_svr.c
m5dial-firmware/main/apps/utilities/rgb/: io_test_rgb.c
m5dial-firmware/main/apps/utils/: nimble_shared.cpp  nimble_shared.h
m5dial-firmware/main/apps/utils/gui_base/: gui_base.h
m5stack-firmware/: platformio.ini
m5stack-firmware/include/: ble_client.h  config.h  ui.h
m5stack-firmware/src/: ble_client.cpp  main.cpp  ui.cpp
rpi-daemon/: ble_server.py  config.json.example  main.py  requirements.txt  rpi-monitor.service  system_info.py
rpi-daemon/tests/: test_system_info.py
rpi-web/: app.py  rpi-monitor-web.service
rpi-web/templates/: commands.html  deploy.html  flash.html  index.html  ros2.html  settings.html
rpi-web/tests/: test_app.py
tools/: ble_ota_server.py
